--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide;
+    @apply bg-[#ecf0f3] dark:bg-gray-800 text-[#1f2937] dark:text-[#ecf0f3] tracking-wide;
   }
   h1,
   h2,
@@ -19,7 +19,7 @@ html {
     @apply font-bold;
   }
   h1 {
-    @apply text-4xl sm:text-5xl md:text-6xl;
+    @apply text-4xl sm:text-5xl md:text-6xl dark:text-[#ecf0f3];
   }
   h2 {
     @apply text-3xl sm:text-4xl;
@@ -31,7 +31,7 @@ html {
     @apply text-xl sm:text-2xl;
   }
   p {
-    @apply text-base md:text-lg;
+    @apply text-base md:text-lg dark:text-[#ecf0f3];
   }
   li {
     @apply cursor-pointer;
