--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] dark:bg-gray-800 text-[#1f2937] dark:text-[#ecf0f3] tracking-wide;
+    @apply bg-[#ecf0f3] dark:bg-gradient-to-b from-[#212429] to-[#212431] text-[#1f2937] dark:text-[#ecf0f3] tracking-wide;
   }
   h1,
   h2,
